# multi-hardware

./: OAT.xml  README.en.md  README_zh.md  bundle.json  devicemanager.gni  distributedhardwarefwk.gni  hisysevent.yaml
application/: BUILD.gn  DHardware_UI.gni  build-profile.json5  oh-package-lock.json5  oh-package.json  oh-package.json5  package-lock.json  package-lock.json5  package.json  package.json5
application/AppScope/: app.json  app.json5
application/entry/: build-profile.json5  hvigorfile.js  oh-package.json5
application/entry/src/main/: module.json  module.json5
application/hvigor/: hvigor-config.json5
av_transport/av_trans_control_center/inner_kits/: BUILD.gn
av_transport/av_trans_control_center/inner_kits/test/: BUILD.gn
av_transport/av_trans_control_center/inner_kits/test/av_trans_control_center_callback_test/: BUILD.gn  av_trans_control_center_callback_test.cpp  av_trans_control_center_callback_test.h
av_transport/av_trans_control_center/services/src/: av_sync_manager.cpp
av_transport/av_trans_control_center/test/unittest/: BUILD.gn
av_transport/av_trans_control_center/test/unittest/inner_kits/: av_trans_control_center_callback_stub_test.cpp  av_trans_control_center_callback_test.cpp  av_trans_control_center_callback_test.h
av_transport/av_trans_control_center/test/unittest/services/: av_sync_manager_test.cpp  av_sync_manager_test.h  av_trans_control_center_callback_proxy_test.cpp  av_trans_control_center_callback_proxy_test.h  av_trans_control_center_test.cpp  av_trans_control_center_test.h
av_transport/av_trans_engine/av_receiver/: BUILD.gn
av_transport/av_trans_engine/av_receiver/include/: av_receiver_engine.h
av_transport/av_trans_engine/av_receiver/src/: av_receiver_engine.cpp
av_transport/av_trans_engine/av_sender/: BUILD.gn
av_transport/av_trans_engine/av_sender/include/: av_sender_engine.h  av_sender_engine_provider.h
av_transport/av_trans_engine/av_sender/src/: av_sender_engine.cpp  av_sender_engine_provider.cpp
av_transport/av_trans_engine/filters/: BUILD.gn
av_transport/av_trans_engine/filters/av_transport_input/: av_transport_input_filter.cpp  av_transport_input_filter.h
av_transport/av_trans_engine/filters/av_transport_output/: av_transport_output_filter.cpp  av_transport_output_filter.h
av_transport/av_trans_engine/plugin/core/: avtrans_input.cpp  avtrans_input.h  avtrans_output.cpp  avtrans_output.h
av_transport/av_trans_engine/plugin/interface/: avtrans_input_plugin.h  avtrans_output_plugin.h
av_transport/av_trans_engine/plugin/plugins/: BUILD.gn
av_transport/av_trans_engine/plugin/test/unittest/core/: BUILD.gn  avtrans_input_test.cpp  avtrans_input_test.h  avtrans_output_test.cpp  avtrans_output_test.h
av_transport/av_trans_handler/histreamer_ability_querier/: BUILD.gn
av_transport/av_trans_handler/histreamer_ability_querier/src/: histreamer_ability_querier.cpp
av_transport/common/include/: av_sync_utils.h  av_trans_buffer.h  av_trans_constants.h  av_trans_errno.h  av_trans_log.h  av_trans_message.h  av_trans_meta.h  av_trans_types.h  av_trans_utils.h  single_instance.h  softbus_channel_adapter.h
av_transport/common/src/: av_sync_utils.cpp  av_trans_buffer.cpp  av_trans_log.cpp  av_trans_message.cpp  av_trans_meta.cpp  av_trans_utils.cpp  softbus_channel_adapter.cpp
av_transport/interface/: i_av_receiver_engine.h  i_av_sender_engine.h
common/utils/include/: constants.h  device_type.h  distributed_hardware_errno.h  idistributed_hardware_manager.h  idistributed_hardware_sink.h  idistributed_hardware_source.h  ihardware_handler.h  ipublisher_listener.h
ext/no_interaction_auth/: BUILD.gn
ext/pin_auth/: BUILD.gn
interfaces/inner_kits/: BUILD.gn
interfaces/inner_kits/include/: distributed_hardware_fwk_kit.h
interfaces/inner_kits/include/ipc/: dhfwk_sa_manager.h  distributed_hardware_proxy.h
interfaces/inner_kits/src/: distributed_hardware_fwk_kit.cpp
interfaces/inner_kits/src/ipc/: dhfwk_sa_manager.cpp  distributed_hardware_proxy.cpp
interfaces/kits/napi/: BUILD.gn
interfaces/kits/napi/src/: native_distributedhardwarefwk_js.cpp
sa_profile/: dhardware.cfg
services/accessmanager/: AccessmanagerFuzzTest
services/devicemanagerservice/: BUILD.gn
services/distributedhardwarefwkservice/: BUILD.gn  distributedhardware_fwk.cfg
services/distributedhardwarefwkservice/include/: distributed_hardware_manager.h  distributed_hardware_manager_factory.h  distributed_hardware_stub.h
services/distributedhardwarefwkservice/include/accessmanager/: access_manager.h
services/distributedhardwarefwkservice/include/componentmanager/: component_manager.h  component_privacy.h
services/distributedhardwarefwkservice/include/hidumphelper/: hidump_helper.h
services/distributedhardwarefwkservice/include/ipc/: publisher_listener_proxy.h
services/distributedhardwarefwkservice/include/localhardwaremanager/: local_hardware_manager.h  plugin_listener_impl.h
services/distributedhardwarefwkservice/include/lowlatency/: low_latency.h
services/distributedhardwarefwkservice/src/: distributed_hardware_manager.cpp  distributed_hardware_manager_factory.cpp  distributed_hardware_service.cpp  distributed_hardware_stub.cpp
services/distributedhardwarefwkservice/test/unittest/common/distributedhardwaremanagerfactory/: BUILD.gn  distributed_hardware_manager_factory_test.cpp
services/distributedhardwarefwkserviceimpl/: BUILD.gn
services/distributedhardwarefwkserviceimpl/src/: distributed_hardware_manager.cpp
test/fuzztest/ipcclientmanager_fuzzer/: BUILD.gn
test/fuzztest/ipccmdregister_fuzzer/: BUILD.gn
test/fuzztest/ipcserverclientproxy_fuzzer/: BUILD.gn
test/fuzztest/ipcserverlistener_fuzzer/: BUILD.gn
test/fuzztest/ipcserverstub_fuzzer/: BUILD.gn
test/unittest/: BUILD.gn
utils/: BUILD.gn
utils/include/: dh_utils_hisysevent.h  dh_utils_hitrace.h  dh_utils_tool.h  histreamer_query_tool.h
utils/include/eventbus/: event_bus.h
utils/src/: anonymous_string.cpp  dh_utils_hisysevent.cpp  dh_utils_hitrace.cpp  dh_utils_tool.cpp  histreamer_ability_parser.cpp  histreamer_query_tool.cpp
(+255 files in other folders)
