# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import(
    "//foundation/distributedhardware/distributed_hardware_fwk/distributedhardwarefwk.gni")

module_out_path = "distributed_hardware_fwk/distributed_hardware_manager_factory_test"

config("module_private_config") {
  include_dirs = [
    "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/hisysevent/include",
    "//base/hiviewdfx/hitrace/interfaces/native/innerkits/include/hitrace_meter",
    "//base/notification/eventhandler/interfaces/inner_api",
    "//commonlibrary/c_utils/base/include",
    "//utils/system/safwk/native/include",
    "//foundation/distributedhardware/device_manager/interfaces/inner_kits/native_cpp/include",
    "//foundation/distributedhardware/device_manager/common/include",
    "${utils_path}/include",
    "${utils_path}/include/log",
    "${common_path}/utils/include",
    "${common_path}/log/include",
    "${services_path}/distributedhardwarefwkservice/include",
    "${services_path}/distributedhardwarefwkservice/include/utils",
    "${services_path}/distributedhardwarefwkservice/include/accessmanager",
    "${utils_path}/include/eventbus",
  ]
}

ohos_unittest("DistributedHardwareManagerFactoryTest") {
  module_out_path = module_out_path

  sources = [
    "${services_path}/distributedhardwarefwkservice/src/accessmanager/access_manager.cpp",
    "${services_path}/distributedhardwarefwkservice/src/distributed_hardware_manager_factory.cpp",
  ]

  sources += [ "distributed_hardware_manager_factory_test.cpp" ]

  configs = [ ":module_private_config" ]

  deps = [
    "${utils_path}:distributedhardwareutils",
    "//foundation/distributedhardware/device_manager/interfaces/inner_kits/native_cpp:devicemanagersdk",
    "//foundation/distributedhardware/distributed_hardware_fwk/services/distributedhardwarefwkservice:distributedhardwarefwksvr",
    "//third_party/googletest:gtest_main",
  ]
  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"dhfwksvr\"",
    "LOG_DOMAIN=0xD004100",
  ]

  external_deps = [ "init:libbegetutil" ]
}

group("distributed_hardware_manager_factory_test") {
  testonly = true

  deps = [ ":DistributedHardwareManagerFactoryTest" ]
}
